# svod

./: .gitignore  .travis.yml  AUTHORS.md  Application.hs  CHANGELOG.md  Foundation.hs  Import.hs  README.md  Settings.hs  prepare.py  setup-db.sh  stack.yaml  svod.cabal
Handler/: Administrative.hs  Approve.hs  ApproveRelease.hs  Artist.hs  Artists.hs  BanUser.hs  ChangePassword.hs  Common.hs  DeleteRelease.hs  DeleteUser.hs  DownloadRelease.hs  EditProfile.hs  EditRelease.hs  Error.hs  Favicon.hs  FollowUser.hs  Home.hs  Info.hs  Login.hs  Logout.hs  NotificationSeen.hs  Notifications.hs  PendingReleases.hs  Profile.hs  Register.hs  Reject.hs  RejectRelease.hs  Release.hs  ReleaseActions.hs  Releases.hs  Robots.hs  SearchReleases.hs  StarRelease.hs  Submit.hs  SubmitRelease.hs  User.hs  Users.hs  Verify.hs
Handler/Release/: Approved.hs  Archive.hs  Data.hs  Edit.hs  Starred.hs  Starrers.hs  Track.hs  Tracks.hs
Handler/User/: Admin.hs  Banned.hs  Follower.hs  Followers.hs  Following.hs  Profile.hs  Staff.hs  Stars.hs  Verified.hs
Helper/: Access.hs  Auth.hs  Email.hs  Form.hs  Json.hs  Path.hs  Property.hs  Rendering.hs
Import/: Message.hs  NoFoundation.hs
Settings/: StaticFiles.hs
Widget/: DngButton.hs  DownloadRelease.hs  FollowUser.hs  Notification.hs  Pagination.hs  Release.hs  Search.hs  StarRelease.hs  User.hs
app/: Main.hs  devel.hs
config/: keter.yml  routes  settings.yml  test-settings.yml
static/css/: svod.css
static/js/: put-anchors.js
templates/: 403.hamlet  404.hamlet  500.hamlet  basic-layout.hamlet  change-password.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  dng-button-widget.hamlet  dng-button-widget.julius  dng-button.hamlet  dng-button.julius  download-release-guest.julius  download-release-unverified.julius  download-release.hamlet  edit-profile.hamlet  edit-release.hamlet  follow-user-guest.julius  follow-user-logged-in.julius  follow-user-unverified.julius  follow-user-widget.hamlet  follow-user.hamlet  follow-user.julius  homepage.hamlet  login.hamlet  message.hamlet  notification-widget.hamlet  notification-widget.julius  notifications.hamlet  pagination-widget.hamlet  pending-releases.hamlet  register.hamlet  release-starrers.hamlet  release-track.hamlet  release-track.julius  release-widget.hamlet  release.hamlet  releases.hamlet  search-releases.hamlet  search-widget.hamlet  star-release-guest.julius  (+23 more)
test/: TestImport.hs
test/Handler/: CommonSpec.hs  FaviconSpec.hs  HomeSpec.hs  RobotsSpec.hs
