--
-- Cabal configuration for ‘svod’ package.
--
-- Copyright © 2015–2016 Mark Karpov
--
-- This file is part of Svod (Свод) project.
--
-- Svod (Свод) is free software: you can redistribute it and/or modify it
-- under the terms of the GNU General Public License as published by the
-- Free Software Foundation, either version 3 of the License, or (at your
-- option) any later version.
--
-- Svod (Свод) is distributed in the hope that it will be useful, but
-- WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
-- Public License for more details.
--
-- You should have received a copy of the GNU General Public License along
-- with this program. If not, see <http://www.gnu.org/licenses/>.

name:                 svod
version:              0.1.0
cabal-version:        >= 1.10
license:              GPL-3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov@opmbx.org>
maintainer:           Mark Karpov <markkarpov@opmbx.org>
homepage:             https://github.com/svod-music/svod
bug-reports:          https://github.com/svod-music/svod/issues
category:             Audio, Web, Database
synopsis:             Web interface of Svod application
build-type:           Simple
description:          Web interface of Svod application
extra-source-files:   AUTHORS.md
                    , CHANGELOG.md
                    , README.md

flag dev
  description:        Turn on development settings.
  default:            False

flag library-only
  description:        Build for use with ‘yesod devel’.
  default:            False

library
  hs-source-dirs:     .
                    , app
  build-depends:      aeson                  >= 0.11   && < 0.12
                    , base                   >= 4.8    && < 5.0
                    , blaze-builder          >= 0.3    && < 0.5
                    , blaze-html             >= 0.8    && < 0.9
                    , bytestring             >= 0.9    && < 0.11
                    , classy-prelude         >= 0.10   && < 0.13
                    , classy-prelude-conduit >= 0.10   && < 0.13
                    , classy-prelude-yesod   >= 0.10   && < 0.13
                    , conduit                >= 1.0    && < 2.0
                    , containers             >= 0.5    && < 0.6
                    , data-default           >= 0.5.3  && < 0.8
                    , fast-logger            >= 2.2    && < 3.0
                    , file-embed
                    , formatting             >= 6.2    && < 7.0
                    , hjsmin                 >= 0.1    && < 0.3
                    , htaglib                >= 1.0    && < 2.0
                    , http-conduit           >= 2.1    && < 2.2
                    , markdown               >= 0.1    && < 0.2
                    , mime-mail              >= 0.4    && < 0.5
                    , monad-control          >= 1.0    && < 1.1
                    , monad-logger           >= 0.3    && < 0.4
                    , nonce                  >= 1.0    && < 1.1
                    , path                   >= 0.5.3  && < 0.6
                    , path-io                >= 1.1.0  && < 2.0
                    , persistent             >= 2.2    && < 3.0
                    , persistent-postgresql  >= 2.2    && < 3.0
                    , persistent-template    >= 2.1    && < 3.0
                    , safe                   >= 0.3    && < 0.4
                    , shakespeare            >= 2.0    && < 2.1
                    , svod-core              >= 0.1.0
                    , template-haskell       >= 2.0    && < 2.12
                    , text                   >= 1.2    && < 1.3
                    , time                   >= 1.4    && < 1.7
                    , unordered-containers   >= 0.2.5  && < 0.2.8
                    , vector                 >= 0.10   && < 0.12
                    , wai                    >= 3.0    && < 4.0
                    , wai-extra              >= 3.0    && < 3.1
                    , wai-logger             >= 2.2    && < 2.3
                    , warp                   >= 3.0    && < 3.3
                    , yaml                   >= 0.8    && < 0.9
                    , yesod                  >= 1.4.2  && < 1.5
                    , yesod-auth             >= 1.4.8  && < 1.5
                    , yesod-core             >= 1.4.6  && < 1.5
                    , yesod-form             >= 1.4.5  && < 1.5
                    , yesod-static           >= 1.5.0  && < 1.6

  if !impl(ghc >= 8.0)
    build-depends:    semigroups   == 0.18.*

  exposed-modules:    Application
                    , Foundation
                    , Handler.ChangePassword
                    , Handler.Error
                    , Handler.Favicon
                    , Handler.Home
                    , Handler.Info
                    , Handler.Login
                    , Handler.Logout
                    , Handler.NotificationSeen
                    , Handler.Notifications
                    , Handler.PendingReleases
                    , Handler.Register
                    , Handler.Release
                    , Handler.Release.Approved
                    , Handler.Release.Archive
                    , Handler.Release.Edit
                    , Handler.Release.Starred
                    , Handler.Release.Starrers
                    , Handler.Release.Track
                    , Handler.Release.Tracks
                    , Handler.Releases
                    , Handler.Robots
                    , Handler.SearchReleases
                    , Handler.SubmitRelease
                    , Handler.User
                    , Handler.User.Admin
                    , Handler.User.Banned
                    , Handler.User.Follower
                    , Handler.User.Followers
                    , Handler.User.Following
                    , Handler.User.Profile
                    , Handler.User.Staff
                    , Handler.User.Stars
                    , Handler.User.Verified
                    , Handler.Users
                    , Handler.Verify
                    , Helper.Access
                    , Helper.Auth
                    , Helper.Email
                    , Helper.Form
                    , Helper.Json
                    , Helper.Path
                    , Helper.Property
                    , Helper.Rendering
                    , Import
                    , Import.Message
                    , Import.NoFoundation
                    , Settings
                    , Settings.StaticFiles
                    , Widget.DngButton
                    , Widget.DownloadRelease
                    , Widget.FollowUser
                    , Widget.Notification
                    , Widget.Pagination
                    , Widget.Release
                    , Widget.Search
                    , Widget.StarRelease
                    , Widget.User

  if flag(dev) || flag(library-only)
    cpp-options:      -DDEVELOPMENT
    ghc-options:      -Wall -O2
  else
    ghc-options:      -Wall -O2

  default-language:   Haskell2010

executable            svod
  if flag(library-only)
    buildable:        False

  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base, svod
  if flag(dev)
    ghc-options:      -O2 -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  else
    ghc-options:      -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  if flag(dev)
    ghc-options:      -O2 -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  build-depends:      base                   >= 4.8    && < 5.0
                    , classy-prelude         >= 0.10   && < 0.13
                    , classy-prelude-yesod   >= 0.10   && < 0.13
                    , hspec                  >= 2.0    && < 3.0
                    , monad-logger           >= 0.3    && < 0.4
                    , persistent             >= 2.2    && < 3.0
                    , persistent-postgresql  >= 2.2    && < 3.0
                    , resourcet              >= 1.0    && < 2.0
                    , shakespeare            >= 2.0    && < 2.1
                    , svod                   >= 0.1
                    , svod-core              >= 0.1
                    , transformers           >= 0.3    && < 0.6
                    , yesod                  >= 1.4.2  && < 1.5
                    , yesod-core             >= 1.4.6  && < 1.5
                    , yesod-test             >= 1.4.3  && < 1.6
  other-modules:      Handler.FaviconSpec
                    , Handler.RobotsSpec
                    , TestImport
  default-language:   Haskell2010

source-repository head
  type:               git
  location:           https://github.com/svod-music/svod.git
